# goit-pyweb-hw-08

./: .gitignore  README.md  connect.py  consumer.py  consumer_email.py  consumer_sms.py  main.py  producer.py  pyproject.toml  search.py  seed.py
services/mongodb/: connect.py  models.py
services/rabbitmq/: connect.py  models.py
