[tool.poetry]
name = "goit-pyweb-hw-08"
version = "0.1.0"
description = "MongoDB"
authors = ["Oleksandr Horbatiuk <oleksandr.v.horbatiuk@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mongoengine = "^0.28.2"
pika = "^1.3.2"
faker = "^26.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
